# ufc-stats

./: pyproject.toml  scrapy_card_loader.py  scrapy_event_loader.py  scrapy_fight_loader.py  ufc_scraper.py  ufc_stats_scraper.py
