[tool.poetry]
name = "ufc-project"
version = "0.1.0"
description = ""
authors = ["Michael Polonskij <michael.polonskij@gmx.de>"]
readme = "README.md"
packages = [{include = "ufc_project"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"
pyyaml = "^6.0.1"
requests = "^2.31.0"
loguru = "^0.7.2"
lxml = "^4.9.4"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
